Fixed bug with cart number not aligning with cart icon on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,9 @@ code {
 
 .cart-icon-container {
   position: relative;
+  width: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .active > .cart-icon-container .cart-icon {
